Agergo brand a todas las acciones relacionadas con el stock.

--- a/backend/test/fixtures/stock_transactions.yml
+++ b/backend/test/fixtures/stock_transactions.yml
@@ -8,6 +8,7 @@ one:
   reason: MyString
   comments: MyText
   user_id: 1
+  brand_id: 1
 
 two:
   style: MyString
@@ -17,3 +18,4 @@ two:
   reason: MyString
   comments: MyText
   user_id: 1
+  brand_id: 1
