--- a/test/fixtures/qr_queues.yml
+++ b/test/fixtures/qr_queues.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  stock_transaction_id: 1
-  printed: false
+  qr_id: 1
+  printed: 
 
 two:
-  stock_transaction_id: 1
-  printed: false
+  qr_id: 1
+  printed: 
