--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,6 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 20
   port: <%= ENV['POSTGRES_PORT'] || 5432 %>
   timeout: 5000
 
