--- a/test/fixtures/brands.yml
+++ b/test/fixtures/brands.yml
@@ -1,3 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 nike:
   name: "Nike"
+
+puma:
+  name: "Puma"
